fixed an annoying white line on mobile caused by the navbar

--- a/src/layout/NavBar.module.css
+++ b/src/layout/NavBar.module.css
@@ -54,7 +54,5 @@
     padding: 0.1rem;
   }
 
-  .nav__links {
-    padding: 10px;
-  }
+  
 }
